scheduler/kubernetes/runner-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: runner
  namespace: fushigi
  labels:
    app: fushigi
    run: runner
    runner: PUT_RUNNER_ID_HERE
spec:
  type: ClusterIP
  selector:
    app: fushigi
    run: runner
    runner: PUT_RUNNER_ID_HERE
  ports:
  - name: http
    port: 3000
    targetPort: 3000
